--- a/src/main/resources/fileXML/mainGame/generalMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/generalMainGame.fxml
@@ -13,7 +13,7 @@
 
 <AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.GeneralMainGameController">
    <children>
-      <Pane prefHeight="923.0" prefWidth="648.0" style="-fx-background-image: url(&quot;/images/gameboard.png&quot;);">
+      <Pane fx:id="gameboard" prefHeight="923.0" prefWidth="648.0" style="-fx-background-image: url(&quot;/images/gameboard.png&quot;);">
          <children>
             <Button fx:id="goToTowersButton" layoutX="37.0" layoutY="29.0" mnemonicParsing="false" onAction="#goToTowers" prefHeight="482.0" prefWidth="519.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
             <Button fx:id="goToProductionButton" layoutX="36.0" layoutY="732.0" mnemonicParsing="false" onAction="#goToProduction" prefHeight="76.0" prefWidth="217.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
@@ -46,7 +46,7 @@
          <children>
             <ImageView fitHeight="352.0" fitWidth="356.0" layoutX="-5.0" layoutY="-2.0" opacity="0.74">
                <image>
-                  <Image url="/images/finestraPiccola.png" />
+                  <Image url="/images/immaginiSetUp/finestraPiccola.png" />
                </image>
             </ImageView>
             <ImageView fitHeight="57.0" fitWidth="69.0" layoutX="114.0" layoutY="26.0" style="-fx-alignment: center">
