--- a/src/main/resources/fileXML/mainGame/towersMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/towersMainGame.fxml
@@ -17,7 +17,7 @@
    <children>
       <ImageView fitHeight="709.0" fitWidth="806.0" layoutX="25.0" layoutY="22.0">
          <image>
-            <Image url="/images/torriGande.png" />
+            <Image url="/images/immaginiSetUp/torri.png" />
          </image>
       </ImageView>
       <ImageView fitHeight="752.0" fitWidth="863.0" layoutX="-2.0">
