--- a/src/main/resources/fileXML/mainGame/generalMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/generalMainGame.fxml
@@ -2,16 +2,17 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.GeneralMainGameController">
+<AnchorPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1" fx:controller="project.client.ui.gui.controller.GeneralMainGameController">
    <children>
       <Pane fx:id="gameboard" prefHeight="923.0" prefWidth="648.0" style="-fx-background-image: url(&quot;/images/gameboard.png&quot;);">
          <children>
@@ -89,34 +90,7 @@
                   <Image url="/images/risorse/soldo.png" />
                </image>
             </ImageView>
-             <SplitPane dividerPositions="0.85" layoutX="-1.0" layoutY="606.0" orientation="VERTICAL" prefHeight="245.0" prefWidth="363.0">
-                 <items>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                         <children>
-                             <Label fx:id="chatArea" layoutX="5.0" layoutY="2.0" prefHeight="195.0" prefWidth="349.0" text="chat" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                         </children>
-                     </AnchorPane>
-                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
-                         <children>
-                             <SplitPane dividerPositions="0.755223880597015" layoutX="-3.0" layoutY="1.0" prefHeight="31.0" prefWidth="363.0">
-                                 <items>
-                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
-                                         <children>
-                                             <TextField fx:id="chatText" layoutY="1.0" prefHeight="29.0" prefWidth="354.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                         </children>
-                                     </AnchorPane>
-                                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="29.0" prefWidth="155.0">
-                                         <children>
-                                             <Button fx:id="send" layoutX="4.0" layoutY="2.0" mnemonicParsing="false" onAction="#sendChat" prefHeight="29.0" prefWidth="59.0" text="Send" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                         </children>
-                                     </AnchorPane>
-                                 </items>
-                             </SplitPane>
-                         </children>
-                     </AnchorPane>
-                 </items>
-             </SplitPane>
-            <VBox layoutY="347.0" prefHeight="260.0" prefWidth="356.0">
+            <VBox layoutY="347.0" prefHeight="505.0" prefWidth="356.0">
                <children>
                   <Button fx:id="personalBoardButton" mnemonicParsing="false" onAction="#showPersonalBoard" prefHeight="65.0" prefWidth="361.0" text="show personal board">
                      <font>
@@ -138,6 +112,14 @@
                         <Font name="Lucida Blackletter" size="32.0" />
                      </font>
                   </Button>
+                  <ScrollPane fx:id="chatArea"  prefHeight="213.0" prefWidth="356.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+
+                  <HBox prefHeight="35.0" prefWidth="356.0">
+                     <children>
+                                 <TextField fx:id="chatText" prefHeight="35.0" prefWidth="257.0" />
+                                 <Button fx:id="send" mnemonicParsing="false" onAction="#sendChat" prefHeight="35.0" prefWidth="99.0" text="Send" />
+                     </children>
+                  </HBox>
                </children>
             </VBox>
             <ImageView fx:id="imageFamiliarNull" fitHeight="84.0" fitWidth="85.0" layoutX="80.0" layoutY="141.0" pickOnBounds="true" preserveRatio="true" />
