--- a/src/main/resources/fileXML/mainGame/councilPalaceMainGame.fxml
+++ b/src/main/resources/fileXML/mainGame/councilPalaceMainGame.fxml
@@ -29,13 +29,19 @@
                         <Image url="/images/immaginiSetUp/councilPalace.png" />
                     </image>
                 </ImageView>
-                <ImageView fx:id="imageInTheCouncil0" fitHeight="86.0" fitWidth="94.0" layoutX="96.0" layoutY="129.0" pickOnBounds="true" preserveRatio="true" />
                <Button fx:id="buttonStoneWood" layoutX="212.0" layoutY="289.0" onAction="#takeStoneWood" pickOnBounds="true" prefHeight="57.0" prefWidth="50.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
                 <Button fx:id="buttonServants" layoutX="269.0" layoutY="287.0" onAction="#takeTwoServants" pickOnBounds="true" prefHeight="63.0" prefWidth="35.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
                 <Button fx:id="buttonTwoCoins" layoutX="318.0" layoutY="292.0" onAction="#takeTwoCoins" pickOnBounds="true" prefHeight="57.0" prefWidth="35.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
                 <Button fx:id="buttonMilitaryPoints" layoutX="365.0" layoutY="293.0" onAction="#takeTwoMiliaryPoints" pickOnBounds="true" prefHeight="57.0" prefWidth="44.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
             <Button fx:id="buttonFaithPoints" layoutX="415.0" layoutY="290.0" onAction="#takeOneFaithPoint" pickOnBounds="true" prefHeight="57.0" prefWidth="44.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
-            <Button fx:id="buttonPlaceFamiliar" layoutX="70.0" layoutY="90.0" onAction="#placeFamiliarInCouncil" pickOnBounds="true" prefHeight="178.0" prefWidth="622.0" style="-fx-background-color: transparent; -fx-border-color: transparent;" />
+            <Button fx:id="buttonPlaceFamiliar" layoutX="70.0" layoutY="90.0" onAction="#placeFamiliarInCouncil" pickOnBounds="true" prefHeight="178.0" prefWidth="622.0" style="-fx-background-color: transparent; -fx-border-color: transparent;">
+               <graphic>
+                  <HBox fx:id="familiarBox" alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="622.0" spacing="5">
+                     <children>
+                            <ImageView fx:id="imageInTheCouncil0" fitHeight="86.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true" />
+                     </children>
+                  </HBox>
+               </graphic></Button>
             </children>
         </Pane>
 
@@ -189,7 +195,6 @@
                 <Image url="/images/cornici/cornice5x27.png" />
             </image>
         </ImageView>
-      <HBox fx:id="familiarBox" alignment="CENTER_LEFT" layoutX="106.0" layoutY="158.0" prefHeight="100.0" prefWidth="622.0" />
     </children>
 
 </AnchorPane>
