--- a/src/main/resources/fileXML/mainGame/rootLayout.fxml
+++ b/src/main/resources/fileXML/mainGame/rootLayout.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.BorderPane?>
 
 
-<BorderPane prefHeight="923.0" prefWidth="1070.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" >
+<BorderPane prefHeight="784.55" prefWidth="909.5" xmlns="http://javafx.com/javafx/8.0.111"
+            xmlns:fx="http://javafx.com/fxml/1">
 
 </BorderPane>
